gitlab.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  labels:
    app: gitlab
spec:
  ports:
    - name: http
      port: 80
    - name: ssh
      port: 22
  selector:
    app: gitlab
    tier: gitlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  labels:
    app: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
      tier: gitlab
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
        tier: gitlab
    spec:
      containers:
      - image: sameersbn/gitlab:10.6.4
        name: gitlab
        ports:
        - containerPort: 80
          name: http
        - containerPort: 22
          name: ssh
        volumeMounts:
        - name: gitlab-persistent-storage
          mountPath: /home/git/data
      volumes:
      - name: gitlab-persistent-storage
        persistentVolumeClaim:
          claimName: gitlab-pv-claim
