postgresql.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: gitlab
spec:
  ports:
    - port: 5432
  selector:
    app: gitlab
    tier: postgresql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
      tier: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
        tier: postgresql
    spec:
      containers:
      - image: sameersbn/postgresql:9.6-2
        name: postgresql
        ports:
        - containerPort: 5432
          name: postgresql
        volumeMounts:
        - name: postgresql-persistent-storage
          mountPath: /var/lib/postgresql
      volumes:
      - name: postgresql-persistent-storage
        persistentVolumeClaim:
          claimName: postgresql-pv-claim
