redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: gitlab
spec:
  ports:
    - port: 6379
  selector:
    app: gitlab
    tier: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
      tier: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
        tier: redis
    spec:
      containers:
      - image: sameersbn/redis
        name: redis
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: data
          mountPath: /var/lib/redis
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
      volumes:
      - name: data
        emptyDir: {}
