ingress.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      proxy_set_header "X-Forwarded-Ssl: on";
  name: ingress
  labels:
    app: ingress
spec:
  rules:
    - host: GITLAB_HOST
      http:
        paths:
          - backend:
              serviceName: gitlab
              servicePort: 80
            path: /

  # This section is only required if TLS is to be enabled for the Ingress
  tls:
      - hosts:
          - GITLAB_HOST
        secretName: GITLAB_HOST-tls
